@@ -180,33 +180,6 @@ public interface RepositoryService {
   long getLatestRevision(final SVNRepository repository) throws SVNException;
 
   /**
-   * Gets the latest repository revisions.
-   *
-   * @param instanceName  The instance name
-   * @param repository    The repository
-   * @param revisionCount Number of revisions to fetch
-   * @return The revisions.
-   * @throws SVNException     if a subversion error occur
-   * @throws SventonException if a sventon specific error occurs
-   */
-  List<SVNLogEntry> getLatestRevisions(final String instanceName, final SVNRepository repository,
-                                       final long revisionCount) throws SVNException, SventonException;
-
-  /**
-   * Gets the latest repository revisions.
-   *
-   * @param instanceName  The instance name
-   * @param repository    The repository
-   * @param path          The repository path
-   * @param revisionCount Number of revisions to fetch
-   * @return The revisions.
-   * @throws SVNException     if a subversion error occur
-   * @throws SventonException if a sventon specific error occurs
-   */
-  List<SVNLogEntry> getLatestRevisions(final String instanceName, final String path, final SVNRepository repository,
-                                       final long revisionCount) throws SVNException, SventonException;
-
-  /**
    * Gets the node type for given path (with or without leaf).
    *
    * @param repository The repository
